crates/toml_edit/tests/snapshots/invalid/float/trailing-dot-min.stderr
TOML parse error at line 1, column 25
  |
1 | trailing-point-min = -1.
  |                         ^
invalid fraction, expected digits
